Benchmarking and testing

--- a/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
+++ b/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
@@ -9,7 +9,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="mazharenko.AoCAgent" Version="6.4.0" />
+      <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\AdventOfCode2024\AdventOfCode2024.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Day01\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
