--- a/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
+++ b/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
@@ -32,6 +32,9 @@
       <None Update="Day05\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day06\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
