--- a/AdventOfCode2024.Tests/AdventOfCode2024.Tests.csproj
+++ b/AdventOfCode2024.Tests/AdventOfCode2024.Tests.csproj
@@ -14,7 +14,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="mazharenko.AoCAgent" Version="6.4.0" />
+      <PackageReference Include="mazharenko.AoCAgent" Version="6.5.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
       <PackageReference Include="NUnit" Version="4.2.2" />
       <PackageReference Include="NUnit.Analyzers" Version="4.4.0">
@@ -49,6 +49,9 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="inputs\input06.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="inputs\input07.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
