--- a/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
+++ b/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
@@ -38,6 +38,9 @@
       <None Update="Day07\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day08\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
