--- a/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
+++ b/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
@@ -44,6 +44,12 @@
       <None Update="Day09\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day10\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day11\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
