--- a/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
+++ b/AdventOfCode2024.Benchmarks/AdventOfCode2024.Benchmarks.csproj
@@ -50,6 +50,9 @@
       <None Update="Day11\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day14\input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
