--- a/AdventOfCode2024/AdventOfCode2024.csproj
+++ b/AdventOfCode2024/AdventOfCode2024.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="mazharenko.AoCAgent" Version="6.5.0" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
     </ItemGroup>
 
 </Project>
